[gd_scene load_steps=6 format=3 uid="uid://ci8d6cyv3od72"]

[ext_resource type="Script" path="res://Scrpits/menu.gd" id="1_pb8s7"]
[ext_resource type="AudioStream" uid="uid://cbvpffgrq2nyi" path="res://Music/BGMUSIC/Menu.mp3" id="2_3plrk"]
[ext_resource type="Texture2D" uid="uid://wrp5houa810c" path="res://Assets/Background/The Dawn/Reference-Image.png" id="3_j27ob"]
[ext_resource type="PackedScene" uid="uid://bis136hblwi22" path="res://Objects/skeleton.tscn" id="4_tfbkx"]
[ext_resource type="PackedScene" uid="uid://phnoalyvfkxs" path="res://Objects/SmallTorch.tscn" id="5_bqg2e"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 35.0
offset_top = -190.0
offset_right = 35.0
offset_bottom = -190.0
grow_vertical = 0
script = ExtResource("1_pb8s7")

[node name="CanvasModulate2" type="CanvasModulate" parent="."]
color = Color(0.137255, 1, 0.980392, 0.670588)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = -255.0
offset_right = 83.0
offset_bottom = -119.0
scale = Vector2(3, 3)

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options
"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Thanks
"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_3plrk")
autoplay = true

[node name="Reference-image" type="Sprite2D" parent="."]
position = Vector2(950, -404)
texture = ExtResource("3_j27ob")

[node name="Skeleton" parent="." instance=ExtResource("4_tfbkx")]
position = Vector2(1288, 66)
scale = Vector2(5, 4.461)

[node name="SmallTorch" parent="." instance=ExtResource("5_bqg2e")]
position = Vector2(526, 82)
scale = Vector2(5, 5)

[node name="SmallTorch2" parent="." instance=ExtResource("5_bqg2e")]
position = Vector2(1776, 93)
scale = Vector2(5, 5)

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
